syntax = "proto3";
package basis.order;
import "helpers.proto";
import "google/protobuf/timestamp.proto";

message Order {
	enum ProcessStatus {
		UNKNOWN = 0;
		NEW = 1;
		ACCEPTED = 2;
		PROCESSING = 3;
		COMPLETED = 4;
		PROXIED = 5;
		CANCELED = 6;
	}
	message ProductEntry {
		string product_id = 1;
		uint64 quantity = 2;
	}

	string id = 1;
	string company_id_from = 2;
	string company_id_to = 3;
	repeated ProductEntry products = 5;
	ProcessStatus process_status = 7;
	google.protobuf.Timestamp created = 8;
	google.protobuf.Timestamp updated = 9;
	uint64 history_len = 10;
	exonum.Hash history_hash = 11;
}

message TxCreate {
	string id = 1;
	string company_id_from = 2;
	string company_id_to = 3;
	repeated Order.ProductEntry products = 4;
	google.protobuf.Timestamp created = 5;
}

message TxUpdateStatus {
	string id = 1;
	Order.ProcessStatus process_status = 2;
	google.protobuf.Timestamp updated = 3;
}

