syntax = "proto3";
package basis.product;
import "helpers.proto";
import "google/protobuf/timestamp.proto";

message ProductVariant {
	message PhysicalProperties {
		enum Units {
			UNKNOWN = 0;
			MM = 1;
			ML = 2;
		}
		message Dimensions {
			double width = 1;
			double height = 2;
			double length = 3;
		}
		Units unit = 1;
		double weight_mg = 2;
		Dimensions dimensions = 3;
	}
	message Input {
		string product_variant_id = 1;
		uint64 quantity = 2;
	}
	message Effort {
		enum Time {
			UNKNOWN = 0;
			NANOSECONDS = 1;
			MILLISECONDS = 2;
			SECONDS = 3;
			MINUTES = 4;
			HOURS = 5;
			DAYS = 6;
			WEEKS = 7;
			YEARS = 8;
		}
		Time time = 1;
		uint64 quantity = 2;
	}

	string id = 1;
	string product_id = 2;
	string name = 3;
	PhysicalProperties properties = 4;
	repeated Input inputs = 5;
	map<string, string> options = 6;
	Effort effort = 7;
	bool active = 8;
	string meta = 9;
	google.protobuf.Timestamp created = 10;
	google.protobuf.Timestamp updated = 11;
	google.protobuf.Timestamp deleted = 12;
}

message Product {
	string id = 1;
	string company_id = 2;
	string name = 3;
	map<string, string> options = 4;
	map<string, ProductVariant> variants = 5;
	string meta = 6;
	bool active = 7;
	google.protobuf.Timestamp created = 8;
	google.protobuf.Timestamp updated = 9;
	uint64 history_len = 10;
	exonum.Hash history_hash = 11;
}

